// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsController createDataRow should process data object to data row using column configuration 1`] = `
{
  "cells": [
    {
      "column": {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "A",
        "captionTemplate": undefined,
        "dataField": "a",
        "dataType": "string",
        "defaultSetCellValue": [Function],
        "editorOptions": {},
        "falseText": "false",
        "fieldTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "a",
        "setCellValue": [Function],
        "showInColumnChooser": true,
        "trueText": "true",
        "validationRules": [],
        "valueTemplate": undefined,
        "visible": true,
        "visibleIndex": 0,
      },
      "displayValue": "my a value",
      "highlightedText": null,
      "index": 0,
      "text": "my a value",
      "value": "my a value",
    },
    {
      "column": {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "B",
        "captionTemplate": undefined,
        "dataField": "b",
        "dataType": "string",
        "defaultSetCellValue": [Function],
        "editorOptions": {},
        "falseText": "false",
        "fieldTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "b",
        "setCellValue": [Function],
        "showInColumnChooser": true,
        "trueText": "true",
        "validationRules": [],
        "valueTemplate": undefined,
        "visible": true,
        "visibleIndex": 1,
      },
      "displayValue": "my b value",
      "highlightedText": null,
      "index": 1,
      "text": "my b value",
      "value": "my b value",
    },
  ],
  "data": {
    "a": "my a value",
    "b": "my b value",
    "id": 1,
  },
  "index": 0,
  "isSelected": false,
  "key": 1,
}
`;

exports[`ItemsController createDataRow should process data object to data row using column configuration 2`] = `
{
  "cells": [
    {
      "column": {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "A",
        "captionTemplate": undefined,
        "dataField": "a",
        "dataType": "string",
        "defaultSetCellValue": [Function],
        "editorOptions": {},
        "falseText": "false",
        "fieldTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "a",
        "setCellValue": [Function],
        "showInColumnChooser": true,
        "trueText": "true",
        "validationRules": [],
        "valueTemplate": undefined,
        "visible": true,
        "visibleIndex": 0,
      },
      "displayValue": "my a value",
      "highlightedText": null,
      "index": 0,
      "text": "my a value",
      "value": "my a value",
    },
    {
      "column": {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "B",
        "captionTemplate": undefined,
        "dataField": "b",
        "dataType": "string",
        "defaultSetCellValue": [Function],
        "editorOptions": {},
        "falseText": "false",
        "fieldTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "b",
        "setCellValue": [Function],
        "showInColumnChooser": true,
        "trueText": "true",
        "validationRules": [],
        "valueTemplate": undefined,
        "visible": true,
        "visibleIndex": 1,
      },
      "displayValue": "my b value",
      "highlightedText": null,
      "index": 1,
      "text": "my b value",
      "value": "my b value",
    },
  ],
  "data": {
    "a": "my a value",
    "b": "my b value",
    "id": 1,
  },
  "index": 0,
  "isSelected": true,
  "key": 1,
}
`;

exports[`ItemsController setSelectionState should update the select state of the item 1`] = `
[
  {
    "cells": [
      {
        "column": {
          "alignment": "right",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "captionTemplate": undefined,
          "dataField": "id",
          "dataType": "number",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "A",
          "captionTemplate": undefined,
          "dataField": "a",
          "dataType": "string",
          "defaultSetCellValue": [Function],
          "editorOptions": {},
          "falseText": "false",
          "fieldTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "a",
          "setCellValue": [Function],
          "showInColumnChooser": true,
          "trueText": "true",
          "validationRules": [],
          "valueTemplate": undefined,
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "my a value",
        "highlightedText": null,
        "index": 1,
        "text": "my a value",
        "value": "my a value",
      },
    ],
    "data": {
      "a": "my a value",
      "id": 1,
    },
    "index": 0,
    "isSelected": true,
    "key": 1,
  },
]
`;
